# cpp_chess_bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: basic.yml
eval_test/: main.cpp
src/: BoardRenderer.cpp  BoardRenderer.h  UCI.cpp  UCI.h  board.cpp  board.h  check_legal.cpp  check_legal.h  database.cpp  database.h  eval.cpp  eval.h  main.cpp  main_uci.cpp  minimax.cpp  minimax.h  misc_funcs.cpp  move_generation.cpp  move_generation.h  set_attacking.cpp  set_attacking.h  windows_getopt.h
tests/: board_test.cpp  eval_test.cpp  minimax_test.cpp  move_generation_test.cpp  uci_test.cpp
tests/data/: all_black_moves_0.txt  all_moves_alpha_black.txt  all_moves_alpha_white.txt  all_moves_beta_black.txt  all_moves_beta_white.txt  all_white_moves_0.txt
